[tool.poetry]
name = "Distrac"
version = "0.1.0"
description = ""
authors = ["Nihal Ramaswamy <nihalramaswamy@gmail.com>, Anupama Nhavalore <anupama.n.nair16@gmail.com>, Gayathri Sunil <gayathrisunil16@gmail.com>"]
readme = "README.md"
packages = [{include = "raft_blockchain"}]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
